# Send

./: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/release/: composeApp-release.apk  output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/xah/send/activity/: MainActivity.kt
composeApp/src/androidMain/kotlin/com/xah/send/application/: App.kt  MyApplication.kt
composeApp/src/androidMain/kotlin/com/xah/send/logic/util/: ClipBoardHelper.android.kt  FilePicker.android.kt  FileUtils.android.kt  (+4 more)
composeApp/src/commonMain/composeResources/drawable/: content_paste.xml  deployed_code.xml  deployed_code_filled.xml  files.xml  join.xml  join_filled.xml  keyboard_alt.xml  progress_activity.xml  send.xml  wifi_tethering.xml  wifi_tethering_error.xml  wifi_tethering_off.xml
composeApp/src/commonMain/kotlin/com/xah/send/ui/: App.kt
composeApp/src/jvmMain/kotlin/com/xah/send/: main.kt
composeApp/src/jvmMain/kotlin/com/xah/send/ui/: main.kt
core/: build.gradle.kts
core/src/commonMain/kotlin/com/send/core/: FindDevices.kt
core/src/commonMain/kotlin/com/send/core/bean/: HelloPacket.kt  LocalDevice.kt  RemoteDevice.kt
gradle/: libs.versions.toml
windowsJni/: .gitignore  CMakeLists.txt  LICENSE  main.c  main.h
windowsJni/jni/: jni-bsdiff.c  jni.h  jni_md.h  jni_native.h
windowsJni/windows/: file.c  pick_file.c  warn.c
(+91 files in other folders)
